Changes
-------

1.0.2
-----
- remove reset_visit_code_sequence_for_subject from view mixin
  (edc-visit-schedule)

1.0.1
-----
- fix issue with unscheduled appointments and visit code sequence
  (edc_appointment)

1.0.0
-----
- update use of format_html for DJ6 (most modules)
- remove all references in templates to `bootstrap3` folders
  (most modules)
- update test settings in modules still using old func_main

0.6.26
------
- pass same params for site to create next action (edc-action-item)

0.6.25
------
- move ReviewQuestions form clean field methods to mixin (edc-consent)
- add missing migration (edc-visit-schedule)

0.6.24
------
- fix issue to ensure create appointments uses explicitly
  passed site_id instead of current site_id
  (edc_appointment, edc_visit_schedule, edc_sites,
  edc-action-item)
- fix tests

0.6.23
------
- fix tests (edc-metadata, edc-action-item)

0.6.22
------
- add ConsentDefinitionExtension (edc-consent)
- update to truncate subjects visit schedule based on consent
  extension. (edc-appointment, edc-visit-schedule,
  edc-visit-tracking, edc-metadata)

0.6.21
------
- move truncate_string() to edc-utils (edc-utils, edc-qareports)

0.6.20
------
- standardise new line insertion around docstrings and fix trailing
  whitespace (edc-form-describer)
- prevent 'Add/Change CRF' button wrapping on whitespace (edc-qareports)

0.6.19
------
- fix regression with pdf_report not having a default NumberedCanvas
  (edc-pdf-report)
- call func to get vars for get_context_data - easier to override in
  tests (edc-sites)
- update test settings (edc-device)

0.6.18
------
- split perms in roles (edc-pharmacy)

0.6.17
------
- fix perms on pharmacy navbar in admin templates (edc-model-admin)
- remove get_boostrap_ver for templates (edc-dashboard, edc-navbar)
- add missing migrations (edc-pharmacy)
- update test settings (edc-appointment, edc-adherence,
  edc-appconfig, edc-dashboard, edc-navbar)


0.6.16
------