@@ -89,6 +89,7 @@ install_requires =
     edc-model-admin==1.0.1
     edc-model-fields==1.0.0
     edc-model-form==1.0.0
+    edc-model-to_dataframe==1.0.0
     edc-navbar==1.0.0
     edc-next-appointment==0.3.1
     edc-notification==1.0.0
