@@ -1,6 +1,15 @@
 Changes
 -------
 
+unreleased
+----------
+- fix pagination in subject review dashboard (edc-dashboard)
+- fix missing TMG/TMG2 Death report "Add" panel on TMG dashboard
+  (edc-adverse-event)
+- refactor ModelToDataframe to improve performance. move from
+  `edc_pdutils` to `edc-model-to-dataframe`.
+  (edc-pdutils, edc-model-to-dataframe)
+
 1.0.2
 -----
 - remove reset_visit_code_sequence_for_subject from view mixin
